# ocr-rs

./: .gitattributes  Cargo.toml  README.md
ddddocr_candle/: Cargo.toml
ddddocr_candle/src/: main.rs
ddddocr_ort/: Cargo.toml
ddddocr_ort/src/: main.rs
python/: .gitignore  README.md  pyproject.toml
python/ddddocr/: __init__.py  __main__.py  charset.json
python/ddddocr_pytorch/: __init__.py  __main__.py
python/paddleocr/: __init__.py  __main__.py
python/paddleocr_onnxruntime/: __init__.py  __main__.py
